# Abstract-salad-factory

./: .bowerrc  .gitignore  MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt
abstract_salad_bar/: __init__.py  __main__.py  app.py  config.py  config_default.yaml  index.html  locale.py  model.py  path.py  static.py  view.py  websocket.py
abstract_salad_bar/bower_components/uikit/: .bower.json
abstract_salad_bar/local_component/: bower.json
abstract_salad_bar/local_component/css/: asb.css
abstract_salad_bar/local_component/js/: asb.js  index.js  util.js
abstract_salad_bar/locale/: index.pot  messages.pot
abstract_salad_bar/locale/nl/LC_MESSAGES/: index.po
abstract_salad_bar/locale/nl_NL/LC_MESSAGES/: index.po
abstract_salad_bar/static/: index.html
abstract_salad_bar/static/en-US/: index.html
abstract_salad_bar/static/js/: asb.js  index.js  util.js
abstract_salad_bar/static/nl/: index.html
abstract_salad_bar/template/: index.html
abstract_salad_bar/template/_locale/: index.html
abstract_salad_bar/tests/: conftest.py  test_app.py  test_model.py  test_websocket.py
asf/: __main__.py  app.py  config_default.yaml  locale.py  model.py  path.py  view.py  websocket.py
asf/bower_components/uikit/: .bower.json
asf/local_component/: bower.json
asf/local_component/js/: asb.js  index.js
asf/locale/: index.pot
asf/locale/nl_NL/LC_MESSAGES/: index.po
asf/template/: index.html
asf/tests/: conftest.py  test_app.py  test_model.py  test_websocket.py
