[tool:pytest]
testpaths = abstract_salad_bar

[metadata]
name = abstract_salad_bar
author = Pieter
author_email = pietpiet@fastmail.net
description-file = README.rst
summary = A reimplementation of the abstract salad bar app.
license = AGPL
classifiers =
    Intended Audience :: Developers
    Environment :: Web Environment
    Topic :: Internet :: WWW/HTTP :: WSGI
    Programming Language :: Python :: 3.5

[entry_points]
console_scripts =
    run-app = abstract_salad_bar.__main__:run
