[tool:pytest]
testpaths = asf

[coverage:run]
source = asf

[coverage:report]
show_missing = True

[tox:tox]
envlist = py35,py36

[testenv]
deps =
    -rrequirements.txt
    -rtest-requirements.txt
commands = pytest --cov {envsitepackagesdir}/asf --cov asf/tests

[metadata]
name = asf
author = Pieter
author_email = pietpiet@fastmail.net
description-file = README.rst
summary = A reimplementation of the abstract salad factory app.
license = Apache 2
classifiers =
    Intended Audience :: Developers
    Environment :: Web Environment
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Internet :: WebSocket
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[entry_points]
console_scripts =
    run-app = asf.__main__:run
    run-websocket = asf.websocket:run

[extensions]
.html = chameleon
